--- a/documentation-devel/content/docs/pot/Book_Info.pot
+++ b/documentation-devel/content/docs/pot/Book_Info.pot
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2007-12-16 21:47+0000\n"
+"POT-Creation-Date: 2008-01-02 06:17+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <kde-i18n-doc@kde.org>\n"
@@ -37,5 +37,5 @@ msgstr ""
 #. Tag: holder
 #: Book_Info.xml:22
 #, no-c-format
-msgid "&FORMAL-RHI;"
+msgid "&HOLDER;"
 msgstr ""
