first step in documentation-devel to documentation-devil
git-svn-id: file:///srv/svn/publican/trunk@53 322d0b13-9966-4b26-b068-8724d74359d3

--- a/documentation-devel/content/docs/pot/Book_Info.pot
+++ b/documentation-devel/content/docs/pot/Book_Info.pot
@@ -31,7 +31,7 @@ msgstr ""
 #, no-c-format
 msgid ""
 "This book will help you install, use, create, and publish Docbook XML books "
-"using the documentation-devel package"
+"using the documentation-devil package"
 msgstr ""
 
 #. Tag: holder
