--- a/documentation-devel/content/docs/pot/Branding.pot
+++ b/documentation-devel/content/docs/pot/Branding.pot
@@ -74,7 +74,7 @@ msgstr ""
 #. Tag: entry
 #: Branding.xml:41
 #, no-c-format
-msgid "documentation-devel"
+msgid "documentation-devil"
 msgstr ""
 
 #. Tag: entry
@@ -100,7 +100,7 @@ msgstr ""
 #. Tag: entry
 #: Branding.xml:55
 #, no-c-format
-msgid "documentation-devel-RedHat"
+msgid "documentation-devil-RedHat"
 msgstr ""
 
 #. Tag: entry
@@ -124,7 +124,7 @@ msgstr ""
 #. Tag: entry
 #: Branding.xml:69
 #, no-c-format
-msgid "documentation-devel-Fedora"
+msgid "documentation-devil-Fedora"
 msgstr ""
 
 #. Tag: entry
@@ -148,7 +148,7 @@ msgstr ""
 #. Tag: entry
 #: Branding.xml:83
 #, no-c-format
-msgid "documentation-devel-JBoss"
+msgid "documentation-devil-JBoss"
 msgstr ""
 
 #. Tag: entry
