--- a/documentation-devel/content/docs/pot/FAQ.pot
+++ b/documentation-devel/content/docs/pot/FAQ.pot
@@ -25,7 +25,7 @@ msgstr ""
 #, no-c-format
 msgid ""
 "The following is a list of frequently asked questions regarding the "
-"documentation-devel toolchain:"
+"documentation-devil toolchain:"
 msgstr ""
 
 #. Tag: para
@@ -100,14 +100,14 @@ msgstr ""
 #. Tag: para
 #: FAQ.xml:85
 #, no-c-format
-msgid "Where are the documentation-devel common files located?"
+msgid "Where are the documentation-devil common files located?"
 msgstr ""
 
 #. Tag: para
 #: FAQ.xml:90
 #, no-c-format
 msgid ""
-"By default they are in the <filename>/usr/share/documentation-devel</"
+"By default they are in the <filename>/usr/share/documentation-devil</"
 "filename> directory."
 msgstr ""
 
@@ -122,7 +122,7 @@ msgstr ""
 #: FAQ.xml:102
 #, no-c-format
 msgid ""
-"Yes. The OASIS DocBook DTD is included in the documentation-devel package, "
-"and is located here: <filename>/usr/share/documentation-devel/xsl/docbook."
+"Yes. The OASIS DocBook DTD is included in the documentation-devil package, "
+"and is located here: <filename>/usr/share/documentation-devil/xsl/docbook."
 "dtd.xml</filename>"
 msgstr ""
