--- a/documentation-devel/content/docs/pot/Introduction.pot
+++ b/documentation-devel/content/docs/pot/Introduction.pot
@@ -24,10 +24,10 @@ msgstr ""
 #: Introduction.xml:7
 #, no-c-format
 msgid ""
-"The documentation-devel toolchain helps you build books in DocBook XML. This "
-"guide describes how to use documentation-devel to create and build books. "
+"The documentation-devil toolchain helps you build books in DocBook XML. This "
+"guide describes how to use documentation-devil to create and build books. "
 "This is not a DocBook XML tutorial, and concentrates only on using the "
-"documentation-devel tools."
+"documentation-devil tools."
 msgstr ""
 
 #. Tag: para
