--- a/documentation-devel/content/docs/pot/Using_Documentation_Devel.pot
+++ b/documentation-devel/content/docs/pot/Using_Documentation_Devel.pot
@@ -17,14 +17,14 @@ msgstr ""
 #. Tag: title
 #: Using_Documentation_Devel.xml:6
 #, no-c-format
-msgid "Using the documentation-devel tool chain"
+msgid "Using the documentation-devil tool chain"
 msgstr ""
 
 #. Tag: para
 #: Using_Documentation_Devel.xml:7
 #, no-c-format
 msgid ""
-"This chapter describes the process of installing the documentation-devel "
+"This chapter describes the process of installing the documentation-devil "
 "package, creating books, the main configuration files, example book files, "
 "and how to build a book."
 msgstr ""
@@ -32,13 +32,13 @@ msgstr ""
 #. Tag: title
 #: Using_Documentation_Devel.xml:11
 #, no-c-format
-msgid "Installing documentation-devel"
+msgid "Installing documentation-devil"
 msgstr ""
 
 #. Tag: para
 #: Using_Documentation_Devel.xml:12
 #, no-c-format
-msgid "To install documentation-devel:"
+msgid "To install documentation-devil:"
 msgstr ""
 
 #. Tag: para
@@ -58,20 +58,20 @@ msgstr ""
 #. Tag: para
 #: Using_Documentation_Devel.xml:25
 #, no-c-format
-msgid "Run the following command to install the documentation-devel package:"
+msgid "Run the following command to install the documentation-devil package:"
 msgstr ""
 
 #. Tag: screen
 #: Using_Documentation_Devel.xml:29
 #, no-c-format
-msgid "# yum install documentation-devel"
+msgid "# yum install documentation-devil"
 msgstr ""
 
 #. Tag: para
 #: Using_Documentation_Devel.xml:33
 #, no-c-format
 msgid ""
-"Alternatively, there are three branded documentation-devel packages "
+"Alternatively, there are three branded documentation-devil packages "
 "available: RedHat, Fedora and JBoss. Run the following command as the root "
 "user to build branded books:"
 msgstr ""
@@ -79,7 +79,7 @@ msgstr ""
 #. Tag: screen
 #: Using_Documentation_Devel.xml:36
 #, no-c-format
-msgid "# yum install documentation-devel-<replaceable>brand</replaceable>"
+msgid "# yum install documentation-devil-<replaceable>brand</replaceable>"
 msgstr ""
 
 #. Tag: para
@@ -135,7 +135,7 @@ msgstr ""
 #: Using_Documentation_Devel.xml:62
 #, no-c-format
 msgid ""
-"view the documentation-devel manual page. The manual page contains the same "
+"view the documentation-devil manual page. The manual page contains the same "
 "information returned by the <command>create_book -help</command> command."
 msgstr ""
 
@@ -238,11 +238,11 @@ msgstr ""
 #, no-c-format
 msgid ""
 "replace <replaceable>brand</replaceable> with RedHat, Fedora, or JBoss. This "
-"requires the appropriate documentation-devel package to be installed. For "
+"requires the appropriate documentation-devil package to be installed. For "
 "example, to build RedHat branded books, you must install the documentation-"
 "devel-RedHat package. See <xref linkend=\"Documentation_Devel-"
 "Using_the_documentation_devel_tool_chain-Installing_documentation_devel\"/> "
-"for instructions on installing the branded documentation-devel packages."
+"for instructions on installing the branded documentation-devil packages."
 msgstr ""
 
 #. Tag: para
@@ -314,7 +314,7 @@ msgid ""
 "#OTHER_LANGS    = as-IN bn-IN de-DE es-ES fr-FR gu-IN hi-IN\n"
 "TRANSLATIONS   = $(XML_LANG) $(OTHER_LANGS)\n"
 "        \n"
-"COMMON_CONFIG   = /usr/share/documentation-devel\n"
+"COMMON_CONFIG   = /usr/share/documentation-devil\n"
 "include $(COMMON_CONFIG)/make/Makefile.common"
 msgstr ""
 
@@ -431,7 +431,7 @@ msgid ""
 "ko-KR ml-IN mr-IN or-IN pa-IN pt-BR ru-RU si-LK ta-IN te-IN zh-CN zh-TW\n"
 "TRANSLATIONS   = $(XML_LANG) $(OTHER_LANGS)\n"
 "        \n"
-"COMMON_CONFIG  = /usr/share/documentation-devel\n"
+"COMMON_CONFIG  = /usr/share/documentation-devil\n"
 "include $(COMMON_CONFIG)/make/Makefile.common"
 msgstr ""
 
