rename to publican
git-svn-id: file:///srv/svn/publican/trunk@68 322d0b13-9966-4b26-b068-8724d74359d3

--- a/documentation-devel/content/docs/pot/Branding.pot
+++ b/documentation-devel/content/docs/pot/Branding.pot
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2008-01-02 06:17+0000\n"
+"POT-Creation-Date: 2008-02-01 00:05+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <kde-i18n-doc@kde.org>\n"
@@ -24,9 +24,9 @@ msgstr ""
 #: Branding.xml:7
 #, no-c-format
 msgid ""
-"Documentation Devel allows users to brand books by changing colours and "
-"logos. Documentation Devel ships with a default brand, common, and three "
-"other Brands. Each brand is distributed under a different license:"
+"Publican allows users to brand books by changing colours and logos. Publican "
+"ships with a default brand, common, and three other Brands. Each brand is "
+"distributed under a different license:"
 msgstr ""
 
 #. Tag: title
@@ -74,7 +74,7 @@ msgstr ""
 #. Tag: entry
 #: Branding.xml:41
 #, no-c-format
-msgid "documentation-devil"
+msgid "publican"
 msgstr ""
 
 #. Tag: entry
@@ -100,7 +100,7 @@ msgstr ""
 #. Tag: entry
 #: Branding.xml:55
 #, no-c-format
-msgid "documentation-devil-RedHat"
+msgid "publican-RedHat"
 msgstr ""
 
 #. Tag: entry
@@ -124,7 +124,7 @@ msgstr ""
 #. Tag: entry
 #: Branding.xml:69
 #, no-c-format
-msgid "documentation-devil-Fedora"
+msgid "publican-fedora"
 msgstr ""
 
 #. Tag: entry
@@ -148,7 +148,7 @@ msgstr ""
 #. Tag: entry
 #: Branding.xml:83
 #, no-c-format
-msgid "documentation-devil-JBoss"
+msgid "publican-JBoss"
 msgstr ""
 
 #. Tag: entry
