--- a/documentation-devel/content/docs/pot/FAQ.pot
+++ b/documentation-devel/content/docs/pot/FAQ.pot
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2008-01-02 06:17+0000\n"
+"POT-Creation-Date: 2008-02-01 00:05+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <kde-i18n-doc@kde.org>\n"
@@ -24,8 +24,8 @@ msgstr ""
 #: FAQ.xml:7
 #, no-c-format
 msgid ""
-"The following is a list of frequently asked questions regarding the "
-"documentation-devil toolchain:"
+"The following is a list of frequently asked questions regarding the publican "
+"toolchain:"
 msgstr ""
 
 #. Tag: para
@@ -100,15 +100,15 @@ msgstr ""
 #. Tag: para
 #: FAQ.xml:85
 #, no-c-format
-msgid "Where are the documentation-devil common files located?"
+msgid "Where are the publican common files located?"
 msgstr ""
 
 #. Tag: para
 #: FAQ.xml:90
 #, no-c-format
 msgid ""
-"By default they are in the <filename>/usr/share/documentation-devil</"
-"filename> directory."
+"By default they are in the <filename>/usr/share/publican</filename> "
+"directory."
 msgstr ""
 
 #. Tag: para
@@ -122,7 +122,6 @@ msgstr ""
 #: FAQ.xml:102
 #, no-c-format
 msgid ""
-"Yes. The OASIS DocBook DTD is included in the documentation-devil package, "
-"and is located here: <filename>/usr/share/documentation-devil/xsl/docbook."
-"dtd.xml</filename>"
+"Yes. The OASIS DocBook DTD is included in the publican package, and is "
+"located here: <filename>/usr/share/publican/xsl/docbook.dtd.xml</filename>"
 msgstr ""
