--- a/documentation-devel/content/docs/pot/Book_Info.pot
+++ b/documentation-devel/content/docs/pot/Book_Info.pot
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2008-01-02 06:17+0000\n"
+"POT-Creation-Date: 2008-02-01 00:05+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <kde-i18n-doc@kde.org>\n"
@@ -23,7 +23,7 @@ msgstr ""
 #. Tag: subtitle
 #: Book_Info.xml:7
 #, no-c-format
-msgid "Documentation Devel"
+msgid "Publican"
 msgstr ""
 
 #. Tag: para
@@ -31,7 +31,7 @@ msgstr ""
 #, no-c-format
 msgid ""
 "This book will help you install, use, create, and publish Docbook XML books "
-"using the documentation-devil package"
+"using the publican package"
 msgstr ""
 
 #. Tag: holder
