--- a/documentation-devel/content/docs/pot/Introduction.pot
+++ b/documentation-devel/content/docs/pot/Introduction.pot
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: http://bugs.kde.org\n"
-"POT-Creation-Date: 2008-01-02 06:17+0000\n"
+"POT-Creation-Date: 2008-02-01 00:05+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <kde-i18n-doc@kde.org>\n"
@@ -24,10 +24,9 @@ msgstr ""
 #: Introduction.xml:7
 #, no-c-format
 msgid ""
-"The documentation-devil toolchain helps you build books in DocBook XML. This "
-"guide describes how to use documentation-devil to create and build books. "
-"This is not a DocBook XML tutorial, and concentrates only on using the "
-"documentation-devil tools."
+"The publican toolchain helps you build books in DocBook XML. This guide "
+"describes how to use publican to create and build books. This is not a "
+"DocBook XML tutorial, and concentrates only on using the publican tools."
 msgstr ""
 
 #. Tag: para
