--- a/publican-fedora/README
+++ b/publican-fedora/README
@@ -1,7 +1,7 @@
 Copyright 2007 Red Hat, Inc.
 Author: Jeff Fearn <jfearn@redhat.com>
 
-Common files and scripts for building Red_Hat_Enterprise_Linux documentation.
+Common files and scripts for building Fedora documentation.
 
 Assumptions: DocBook xml, *nix, en-US source language.
 
