--- a/publican-jboss/pot/Boilerplate.pot
+++ b/publican-jboss/pot/Boilerplate.pot
@@ -1,92 +1,82 @@
+# SOME DESCRIPTIVE TITLE.
+# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
+#
+#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2007-11-05 08:09+1000\n"
+"Report-Msgid-Bugs-To: http://bugs.kde.org\n"
+"POT-Creation-Date: 2008-07-04 05:27+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"Language-Team: LANGUAGE <kde-i18n-doc@kde.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Type: application/x-xml2pot; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: ./Boilerplate.xml:8(para) 
-msgid "Copyright <trademark class=\"copyright\"/> 2007 by Red Hat, Inc. This material may be distributed only subject to the terms and conditions set forth in the Open Publication License, V1.0 or later (the latest version is presently available at <ulink url=\"http://www.opencontent.org/openpub/\">http://www.opencontent.org/openpub/</ulink>)."
+#. Tag: para
+#: Boilerplate.xml:8
+#, no-c-format
+msgid ""
+"Copyright <trademark class=\"copyright\"></trademark> 2007 by Red Hat, Inc. "
+"This material may be distributed only subject to the terms and conditions "
+"set forth in the Open Publication License, V1.0 or later (the latest version "
+"is presently available at <ulink url=\"http://www.opencontent.org/openpub/"
+"\">http://www.opencontent.org/openpub/</ulink>)."
 msgstr ""
 
-#: ./Boilerplate.xml:15(para) 
-msgid "Distribution of substantively modified versions of this document is prohibited without the explicit permission of the copyright holder."
+#. Tag: para
+#: Boilerplate.xml:15
+#, no-c-format
+msgid ""
+"Distribution of substantively modified versions of this document is "
+"prohibited without the explicit permission of the copyright holder."
 msgstr ""
 
-#: ./Boilerplate.xml:19(para) 
-msgid "Distribution of the work or derivative of the work in any standard (paper) book form for commercial purposes is prohibited unless prior permission is obtained from the copyright holder."
+#. Tag: para
+#: Boilerplate.xml:19
+#, no-c-format
+msgid ""
+"Distribution of the work or derivative of the work in any standard (paper) "
+"book form for commercial purposes is prohibited unless prior permission is "
+"obtained from the copyright holder."
 msgstr ""
 
-#: ./Boilerplate.xml:24(para) 
-msgid "Red Hat and the Red Hat \"Shadow Man\" logo are registered trademarks of Red Hat, Inc. in the United States and other countries."
+#. Tag: para
+#: Boilerplate.xml:24
+#, no-c-format
+msgid ""
+"Red Hat and the Red Hat \"Shadow Man\" logo are registered trademarks of Red "
+"Hat, Inc. in the United States and other countries."
 msgstr ""
 
-#: ./Boilerplate.xml:28(para) 
-msgid "All other trademarks referenced herein are the property of their respective owners."
+#. Tag: para
+#: Boilerplate.xml:28
+#, no-c-format
+msgid ""
+"All other trademarks referenced herein are the property of their respective "
+"owners."
 msgstr ""
 
-#: ./Boilerplate.xml:32(para) 
+#. Tag: para
+#: Boilerplate.xml:32
+#, no-c-format
 msgid "The GPG fingerprint of the security@redhat.com key is:"
 msgstr ""
 
-#: ./Boilerplate.xml:35(para) 
+#. Tag: para
+#: Boilerplate.xml:35
+#, no-c-format
 msgid "CA 20 86 86 2B D6 9D FC 65 F6 EC C4 21 91 80 CD DB 42 A6 0E"
 msgstr ""
 
-#: ./Boilerplate.xml:39(street) 
-msgid "1801 Varsity Drive"
+#. Tag: address
+#: Boilerplate.xml:39
+#, no-c-format
+msgid ""
+"<street>1801 Varsity Drive</street> <city>Raleigh</city>, <state>NC</state> "
+"<postcode>27606-2072</postcode> <country>USA</country> <phone>Phone: +1 919 "
+"754 3700</phone> <phone>Phone: 888 733 4281</phone> <fax>Fax: +1 919 754 "
+"3701</fax> <pob>PO Box 13588</pob> <city>Research Triangle Park</city>, "
+"<state>NC</state> <postcode>27709</postcode> <country>USA</country>"
 msgstr ""
-
-#: ./Boilerplate.xml:40(city) 
-msgid "Raleigh"
-msgstr ""
-
-#: ./Boilerplate.xml:40(state) ./Boilerplate.xml:46(state) 
-msgid "NC"
-msgstr ""
-
-#: ./Boilerplate.xml:40(postcode) 
-msgid "27606-2072"
-msgstr ""
-
-#: ./Boilerplate.xml:41(country) ./Boilerplate.xml:47(country) 
-msgid "USA"
-msgstr ""
-
-#: ./Boilerplate.xml:42(phone) 
-msgid "Phone: +1 919 754 3700"
-msgstr ""
-
-#: ./Boilerplate.xml:43(phone) 
-msgid "Phone: 888 733 4281"
-msgstr ""
-
-#: ./Boilerplate.xml:44(fax) 
-msgid "Fax: +1 919 754 3701"
-msgstr ""
-
-#: ./Boilerplate.xml:45(pob) 
-msgid "PO Box 13588"
-msgstr ""
-
-#: ./Boilerplate.xml:46(city) 
-msgid "Research Triangle Park"
-msgstr ""
-
-#: ./Boilerplate.xml:46(postcode) 
-msgid "27709"
-msgstr ""
-
-#: ./Boilerplate.xml:39(address) 
-msgid "<placeholder-1/><placeholder-2/>, <placeholder-3/><placeholder-4/><placeholder-5/><placeholder-6/><placeholder-7/><placeholder-8/><placeholder-9/><placeholder-10/>, <placeholder-11/><placeholder-12/><placeholder-13/>"
-msgstr ""
-
-#. Put one translator per line, in the form of NAME <EMAIL>, YEAR1, YEAR2.
-#: ./Boilerplate.xml:0(None) 
-msgid "translator-credits"
-msgstr ""
-
