add functionality to export po/pot files to ECS repo for translation
git-svn-id: file:///srv/svn/publican/trunk@338 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican-jboss/pot/Translatable-Entities.pot
+++ b/publican-jboss/pot/Translatable-Entities.pot
@@ -1,3 +1,16 @@
+#
+#, fuzzy
+msgid ""
+msgstr ""
+"Project-Id-Version: 0\n"
+"POT-Creation-Date: 2008-07-04 16:19+1000\n"
+"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Language-Team: LANGUAGE <LL@li.org>\n"
+"MIME-Version: 1.0\n"
+"Content-Type: text/plain; charset=UTF-8\n"
+"Content-Transfer-Encoding: 8bit\n"
+
 
 #. ADS
 #: rh-entity:2
